--- a/index.html
+++ b/index.html
@@ -10,9 +10,35 @@
 </head>
   <body>
     <div id="app">
-      <img src="/images/imageTEST.jpg" style="height: 80vh; margin: 20px;">
-      <p class="invisible cartel">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto nemo ullam corrupti. Accusantium saepe aut hic sed cum, aliquam dolor maxime non, alias at asperiores mollitia quaerat praesentium veniam tempore! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet ipsum itaque quam. Doloremque voluptas nihil maiores necessitatibus magni quo corrupti quod, facere voluptatum similique facilis cumque voluptates beatae dolorum! Ducimus?</p>
-    </div>
+      <div id="anim-intro">
+
+      </div>
+      <div id="mainContent" style="display: none;">
+        <div id="burgerMenu"></div>
+        <div id="navMenu" style="display: none;">
+          <div class="closeBtn"></div>
+          <ul class="navList">
+            <li><a>HOME</a></li>
+            <li><a>QUÈSACO ?</a></li>
+            <li><a>AVEC QUOI ?</a></li>
+            <li><a>POUR QUI ?</a></li>
+            <li><a>ET VOUS ?</a></li>
+          </ul>
+          <a>À propos & sources</a>
+        </div>
+        <div id="about" style="display: none;">
+
+        </div>
+        <div id="homepage">
+          <div class="homepageTitle">
+            <h1>ART BRUT</h1>
+            <h2>Une exposition virtuelle</h2>
+          </div>
+          <div class="hintText">
+            <p>Scrollez ou glissez latéralement pour naviguer.</p>
+          </div>
+        </div>
+      </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
