--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Barrio&family=Beth+Ellen&family=Darumadrop+One&family=Gochi+Hand&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Unbounded:wght@200..900&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Barrio&family=Beth+Ellen&family=Darumadrop+One&family=Gochi+Hand&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Unbounded:wght@200..900&display=swap"
     rel="stylesheet">
 </head>
 
@@ -156,8 +156,14 @@
           </div>
         </div>
       </div>
-      <div id="pourqui" class="panel">
-        <h1>POUR QUI ?</h1>
+      <div id="pourqui-intro" class="panel">
+        <h1 class="plus-jakarta-sans-extra-bold">POUR QUI ?</h1>
+        <p class="plus-jakarta-sans-extra-bold">Au début du XXᵉ siècle, les créations des personnes marginalisées ou
+          internées étaient souvent désignées comme</p>
+        <img src="/images/pour-qui/artdesfous.png">
+        <img src="/images/pour-qui/artdesallienes.png">
+        <p class="plus-jakarta-sans-extra-bold">Ces œuvres, ignorées par le monde officiel de l’art, ont été longtemps
+          considérées comme des curiosités, des objets d’étude psychiatrique plutôt que des créations légitimes.</p>
       </div>
       <div id="etvous" class="panel">
         <h1>ET VOUS ?</h1>
