--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Barrio&family=Beth+Ellen&family=Darumadrop+One&family=Gochi+Hand&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Unbounded:wght@200..900&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Barrio&family=Beth+Ellen&family=Darumadrop+One&family=Gochi+Hand&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Unbounded:wght@200..900&display=swap&family=Love+Ya+Like+A+Sister&display=swap&family=Dokdo&family=Gochi+Hand&display=swap"
     rel="stylesheet">
 </head>
 
@@ -86,76 +86,251 @@
       <div id="avecquoi-robillard" class="panel">
         <div class="scroll-fusil">
           <div class="fusil-container">
-            <img src="/images/avec-quoi/Fusil1.png" class="fusil">
-            <img src="/images/avec-quoi/Fusil2.png" class="fusil">
-            <img src="/images/avec-quoi/Fusil3.png" class="fusil">
-            <img src="/images/avec-quoi/Fusil4.png" class="fusil">
-            <img src="/images/avec-quoi/Fusil5.png" class="fusil">
+            <img src="/images/avec-quoi/robillard/Fusil1.png" class="fusil">
+            <img src="/images/avec-quoi/robillard/Fusil2.png" class="fusil">
+            <img src="/images/avec-quoi/robillard/Fusil3.png" class="fusil">
+            <img src="/images/avec-quoi/robillard/Fusil4.png" class="fusil">
+            <img src="/images/avec-quoi/robillard/Fusil5.png" class="fusil">
           </div>
         </div>
         <div class="andrerobillard avecquoi-artistes">
-          <img id="boom-robillard" src="/images/avec-quoi/Boom.gif" alt="gif d'une explosion">
+          <img id="boom-robillard" src="/images/avec-quoi/robillard/Boom.gif" alt="gif d'une explosion">
           <div>
             <h2 class="darumadrop-one-regular">André Robillard</h2>
             <h3 class="darumadrop-one-regular">1931 - ...</h3>
             <p class="unbounded-light">Robillard transforme des objets métalliques en armes imaginaires, symbolisant la
               transfiguration créative
               de matériaux utilitaires ou abandonnés.</p>
-            <img src="/images/avec-quoi/andrerobillard.png" alt="photo d'André Robillard">
+            <img src="/images/avec-quoi/robillard/andrerobillard.png" alt="photo d'André Robillard">
             <p class="montserrat-regular"><strong>André Robillard</strong>, Fusils de récupération, années 1960 </p>
           </div>
-          <img id="bandeau-robillard" src="/images/avec-quoi/bandeau.png" alt="bandeau de séparation tricolore">
+          <img id="bandeau-robillard" src="/images/avec-quoi/robillard/bandeau.png"
+            alt="bandeau de séparation tricolore">
         </div>
       </div>
 
       <div id="avecquoi-maisonneuve" class="panel">
-        <video autoplay loop muted>
-          <source src="/images/avec-quoi/watertexture.mp4">
-        </video>
+
+        <img src="/images/avec-quoi/maisonneuve/fond.png" class="layer-texture-gray">
+
         <div class="maisonneuve avecquoi-artistes">
           <div>
             <h2 class="fungifreak-regular">Pascal Désiré Maisonneuve</h2>
             <h3 class="gochi-hand-regular">1863 - 1934</h3>
           </div>
-          <img src="/images/avec-quoi/Maisonneuve.png" alt="photo de Pascal Désiré Maisonneuve">
+          <img class="artist-photo" src="/images/avec-quoi/maisonneuve/Maisonneuve.png"
+            alt="photo de Pascal Désiré Maisonneuve">
           <div class="maisonneuve-oeuvres">
-            <img src="/images/avec-quoi/masque1.png" data-title="Tête aux larges oreilles"
+            <img src="/images/avec-quoi/maisonneuve/masque1.png" data-title="Tête aux larges oreilles"
               data-date="Entre 1927 et 1928" data-desc="Assemblage de coquillages, 41 x 57 x 26 cm.">
 
-            <img src="/images/avec-quoi/masque2.png" data-title="Sans titre" data-date="Entre 1927 et 1928"
-              data-desc="Assemblage de coquillages.">
-
-            <img src="/images/avec-quoi/masque3.png" data-title="Le Tartare" data-date="Entre 1927 et 1928"
+            <img src="/images/avec-quoi/maisonneuve/masque3.png" data-title="Le Tartare" data-date="Entre 1927 et 1928"
               data-desc="Assemblage de coquillages, 18 x 17 x 12 cm.">
 
-            <img src="/images/avec-quoi/masque4.png" data-title="Le Diable" data-date="entre 1927 et 1928"
+            <img src="/images/avec-quoi/maisonneuve/masque4.png" data-title="Le Diable" data-date="entre 1927 et 1928"
               data-desc="Assemblage de coquillages, 25 x 22 x 19 cm.">
           </div>
-          <p class="unbounded-light">Maisonneuve utilise des coquillages et objets naturels pour créer des visages
-            expressifs. L’œuvre illustre
-            comment un matériau simple et quotidien peut devenir porteur de sens et d’émotion.</p>
+          <p class="unbounded-light description-text">Maisonneuve utilise des coquillages et objets naturels pour créer
+            des visages
+            expressifs. L’œuvre illustre comment un matériau simple et quotidien peut devenir porteur de sens et
+            d’émotion.</p>
+          <img src="/images/avec-quoi/maisonneuve/water_overlay.png" class="layer-overlay-blue">
         </div>
-        <div class="perles-container">
-          <img class="perle" src="/images/avec-quoi/perle.png">
-        </div>
+
       </div>
 
       <div id="avecquoi-cheval" class="panel">
-        <div class="ferdinandcheval avecquoi-artistes">
-          <div>
-            <img src="/images/avec-quoi/palais1.png">
-            <div>
-              <img src="/images/avec-quoi/palais2.png">
-              <img src="/images/avec-quoi/ferdinandcheval.png">
+        <img src="/images/avec-quoi/cheval/bgAnim.gif" class="bg-video-cheval">
+
+        <div class="ferdinandcheval">
+
+          <div class="cheval-text">
+            <div class="cheval-title-group">
+              <h2 class="barrio-regular">FERDINAND CHEVAL</h2>
+              <h3 class="barrio-regular">1836 - 1924</h3>
             </div>
+
+            <p class="unbounded-light cheval-desc">
+              Ferdinand Cheval, Palais idéal du facteur Cheval, Hauterives, de 1879 à 1912
+            </p>
           </div>
-          <div>
-            <h2 class="barrio-regular">FERDINAND CHEVAL</h2>
-            <h3 class="barrio-regular">1836 - 1924</h3>
-            <img src="/images/avec-quoi/palais3.png">
+
+          <div class="cheval-collage">
+            <img src="/images/avec-quoi/cheval/palais1.png" class="palais-1">
+
+            <img src="/images/avec-quoi/cheval/palais2.png" class="palais-2">
+
+            <img src="/images/avec-quoi/cheval/palais3.png" class="palais-3">
+
+            <img src="/images/avec-quoi/cheval/ferdinandcheval.png" class="cheval-portrait">
+          </div>
+
+        </div>
+      </div>
+
+      <div id="avecquoi-scott" class="panel">
+        <img src="/images/avec-quoi/scott/green_texture.png" class="scott-bg">
+
+        <div class="scott-center">
+          <h2 class="love-ya-like-a-sister-regular">Judith Scott</h2>
+          <h3 class="love-ya-like-a-sister-regular">1941 - 2005</h3>
+
+          <div class="red-border-box">
+            <p class="unbounded-light">
+              Judith Scott enveloppe, noue, accumule des fibres comme si chaque matériau capturait une émotion.
+              <br><br>
+              Ce geste instinctif rappelle les débuts de l'art brut défini par Dubuffet : créer sans restriction,
+              directement depuis la vie.
+            </p>
+          </div>
+        </div>
+
+        <div class="scott-carousel-wrapper">
+          <div class="scott-carousel">
+            <img src="/images/avec-quoi/scott/oeuvre1.png" class="scott-item" data-title="Sans-titre" data-date="2004"
+              data-desc="Médias mixtes">
+            <img src="/images/avec-quoi/scott/oeuvre2.png" class="scott-item" data-title="Sans-titre" data-date="1986"
+              data-desc="Laines et objets de récupération">
+            <img src="/images/avec-quoi/scott/oeuvre3.png" class="scott-item" data-title="Sans-titre" data-date="2003"
+              data-desc="médias mixtes, Creative Growth Art Center, Oakland">
+            <img src="/images/avec-quoi/scott/oeuvre4.png" class="scott-item" data-title="Sans-titre"
+              data-date="Date inconnue" data-desc="Médias mixtes">
+            <img src="/images/avec-quoi/scott/oeuvre5.png" class="scott-item" data-title="Sans-titre" data-date="2000"
+              data-desc="Médias mixtes">
+            <img src="/images/avec-quoi/scott/oeuvre6.png" class="scott-item" data-title="Sans-titre" data-date="1990"
+              data-desc="Laine synthétique, bois et carton">
+            <img src="/images/avec-quoi/scott/oeuvre8.png" class="scott-item" data-title="Sans-titre" data-date="1992"
+              data-desc="Laine et objets de récupération">
+            <img src="/images/avec-quoi/scott/oeuvre7.png" class="scott-item" data-title="Sans-titre" data-date="1990"
+              data-desc="Laine synthétique, bambou et carton">
           </div>
         </div>
       </div>
+
+      <div id="avecquoi-hassan" class="panel">
+
+        <div class="video-wrapper">
+          <iframe src="https://player.vimeo.com/video/300795612?background=1&autoplay=1&loop=1&byline=0&title=0&muted=1"
+            frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+        </div>
+
+        <img src="/images/avec-quoi/hassan/torn_edge_green.png" class="hassan-edge-left">
+
+        <div class="hassan-content">
+
+          <div class="hassan-grid">
+
+            <div class="hassan-item">
+              <img src="/images/avec-quoi/hassan/oeuvre1.png" alt="Œuvre de Hassan">
+              <div class="hassan-caption montserrat-regular">
+                <p><strong>Sans titre</strong>, graphite/crayon de couleur/peinture sur bois,</p>
+                <p>22 x 11 cm, galerie Christian Berst, Paris, 2015</p>
+              </div>
+            </div>
+
+            <div class="hassan-item">
+              <img src="/images/avec-quoi/hassan/oeuvre2.png" alt="Œuvre de Hassan">
+              <div class="hassan-caption montserrat-regular">
+                <p><strong>Sans titre</strong>, médias mixtes sur bois,</p>
+                <p>9,5 x 25 cm, galerie Ricco/Maresca, New York, 2010-2011</p>
+              </div>
+            </div>
+
+            <div class="hassan-item">
+              <img src="/images/avec-quoi/hassan/oeuvre3.jpg" alt="Œuvre de Hassan">
+              <div class="hassan-caption montserrat-regular">
+                <p><strong>Sans titre</strong>, crayon/crayon de couleur/peinture sur bois,</p>
+                <p>32,5 x 16 cm, galerie Christian Berst, Paris, 2015</p>
+              </div>
+            </div>
+
+            <div class="hassan-item">
+              <img src="/images/avec-quoi/hassan/oeuvre4.png" alt="Œuvre de Hassan">
+              <div class="hassan-caption montserrat-regular">
+                <p><strong>Sans titre</strong>, crayon/crayon de couleur/peinture sur bois,</p>
+                <p>18,8 x 6,5 cm, galerie Christian Berst, Paris, 2015</p>
+              </div>
+            </div>
+
+            <div class="hassan-item">
+              <img src="/images/avec-quoi/hassan/oeuvre5.png" alt="Œuvre de Hassan">
+              <div class="hassan-caption montserrat-regular">
+                <p><strong>Sans titre</strong>, médias mixtes sur bois, galerie du Moineau</p>
+                <p>Écarlate, Paris, date inconnue</p>
+              </div>
+            </div>
+
+            <div class="hassan-item">
+              <img src="/images/avec-quoi/hassan/oeuvre6.png" alt="Œuvre de Hassan">
+              <div class="hassan-caption montserrat-regular">
+                <p><strong>Maison</strong>, médias mixtes sur bois, galerie du Moineau</p>
+                <p>Écarlate, Paris, date inconnue</p>
+              </div>
+            </div>
+
+          </div>
+
+          <div class="hassan-title">
+            <h2 class="darumadrop-one-regular">Hassan</h2>
+            <h3 class="darumadrop-one-regular">??? - ???</h3>
+          </div>
+
+        </div>
+      </div>
+
+      <div id="avecquoi-nedjar" class="panel">
+
+        <img src="/images/avec-quoi/nedjar/animBg.gif" class="nedjar-bg-deco">
+
+        <div class="nedjar-content">
+          <div class="nedjar-header">
+            <h1 class="gochi-hand-regular">Michel Nedjar</h1>
+            <h3 class="gochi-hand-regular">1947 - ...</h3>
+          </div>
+
+          <p class="unbounded-light nedjar-desc">
+            Depuis les premiers masques de coquillages de Pascal Désir Maisonneuve
+            jusqu'aux poupées de Michel Nedjar, la “matière pauvre” devient un trésor.
+            <br><br>
+            Les artistes d’art brut prouvent que l’essentiel naît souvent de ce que l’on néglige.
+          </p>
+        </div>
+
+        <img src="/images/avec-quoi/nedjar/artist.png" class="nedjar-artist" alt="Michel Nedjar">
+
+        <div class="doll-wrapper" style="left: 15%; height: 60vh;" data-title="Poupée" data-date="1977"
+          data-desc="Tissus/fils/nacre/métal, 30 x 15 x 5,5 cm">
+          <div class="string"></div>
+          <img src="/images/avec-quoi/nedjar/doll3.png" class="doll">
+        </div>
+
+        <div class="doll-wrapper" style="left: 30%; height: 80vh;" data-title="Poupée" data-date="2003"
+          data-desc="tissus/fils, 90 x 27 x 27 cm">
+          <div class="string"></div>
+          <img src="/images/avec-quoi/nedjar/doll4.png" class="doll">
+        </div>
+
+        <div class="doll-wrapper" style="left: 45%; height: 70vh;" data-title="Sans-titre" data-date="1979-1980"
+          data-desc="tissu/pigment/brindille/anneau métallique/lainage/ficelle, 63 x 25 x 19 cm">
+          <div class="string"></div>
+          <img src="/images/avec-quoi/nedjar/doll5.png" class="doll">
+        </div>
+
+        <div class="doll-wrapper" style="left: 70%; height: 45vh;" data-title="Sans-titre" data-date="1980-1984"
+          data-desc="papier mâché/tissu/fourrure/terre, 47,5 x 12 x 9,5 cm">
+          <div class="string"></div>
+          <img src="/images/avec-quoi/nedjar/doll2.png" class="doll">
+        </div>
+
+        <div class="doll-wrapper" style="left: 85%; height: 65vh;" data-title="Sans-titre" data-date="1980-1984"
+          data-desc="tissu/terre/plâtre/ficelle/papier, 59, x 20,5 x 13 cm">
+          <div class="string"></div>
+          <img src="/images/avec-quoi/nedjar/doll1.png" class="doll">
+        </div>
+
+      </div>
+
+
       <div id="pourqui-intro" class="panel">
         <h1 class="plus-jakarta-sans-extra-bold">POUR QUI ?</h1>
         <p class="plus-jakarta-sans-extra-bold">Au début du XXᵉ siècle, les créations des personnes marginalisées ou
