--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 
 
       <div id="pourqui-intro" class="panel">
-        <h1 class="plus-jakarta-sans-extra-bold">POUR QUI ?</h1>
+        <h1 class="beth-ellen-regular">Pour qui ?</h1>
         <p class="plus-jakarta-sans-extra-bold">Au début du XXᵉ siècle, les créations des personnes marginalisées ou
           internées étaient souvent désignées comme</p>
         <img src="/images/pour-qui/artdesfous.png">
@@ -340,6 +340,98 @@
         <p class="plus-jakarta-sans-extra-bold">Ces œuvres, ignorées par le monde officiel de l’art, ont été longtemps
           considérées comme des curiosités, des objets d’étude psychiatrique plutôt que des créations légitimes.</p>
       </div>
+
+      <div id="pourqui-dubuffet" class="panel">
+        <img src="/images/pour-qui/dubuffet/image1.png">
+        <p class="plus-jakarta-sans-extra-bold">Jean Dubuffet, fasciné par ces formes de créativité brutes, rassemble
+          près de 5000 œuvres en 1970, provenant
+          de patients, autodidactes et marginaux.</p>
+        <img src="/images/pour-qui/dubuffet/image2.png">
+        <img src="/images/pour-qui/dubuffet/image3.png">
+        <img src="/images/pour-qui/dubuffet/image4.png">
+
+        <div>
+          <p class="plus-jakarta-sans-extra-bold"> Il pense que la banalité quotidienne recèle davantage d’art et de
+            poésie que les grandes académies, et cherche à plonger le monde artistique dans un sentiment primitif
+            d’humanité, loin de l’industrie commerciale et des codes traditionnels.</p>
+          <img src="/images/pour-qui/dubuffet/image5.png">
+        </div>
+        <p class="plus-jakarta-sans-extra-bold">Mais lorsque Dubuffet propose de donner sa collection à la ville de
+          Paris, celle-ci refuse de lui accorder le statut d’utilité publique, estimant que ces œuvres ne relèvent pas
+          de l’art légitime.</p>
+
+      </div>
+
+      <div id="pourqui-collection" class="panel">
+
+        <img src="/images/pour-qui/collection/image1.png">
+
+        <div class="collection-text">
+          <div>
+            <p class="plus-jakarta-sans-extra-bold">Dubuffet finit par donner sa collection à la ville de Lausanne,
+              fondant ainsi
+            </p>
+            <h1 class="beth-ellen-regular">la Collection de l’Art Brut </h1>
+            <p class="plus-jakarta-sans-extra-bold">et invente le terme Art Brut : un art en marge des institutions,
+              spontané et pur. Ce geste symbolise le rejet institutionnel et le retrait d’un corpus entier vers un lieu
+              hors de la capitale.</p>
+          </div>
+
+          <p class="plus-jakarta-sans-extra-bold">Les artistes eux-mêmes sont souvent confrontés au rejet. Adolf
+            Wölfli, issu d’un milieu modeste, interné à l’hôpital psychiatrique de la Waldau, se nomme lui-même «Saint»,
+            «Grand-Grand-Dieu» ou «Empereur» dans un univers personnel où il échappe aux accidents et aux monstres.
+          </p>
+        </div>
+        <img src="/images/pour-qui/collection/image2.png">
+        <img src="/images/pour-qui/collection/image3.png">
+        <h2 class="plus-jakarta-sans-extra-bold" id="pourqui-collection-title">
+          Ses dessins monumentaux étaient
+          <span class="beth-ellen-regular">ignorés</span>
+          par les institutions et révélés seulement des années plus tard,
+          après avoir défié tous les codes du monde de l’art officiel.
+          Son parcours illustre la façon dont l’institution médicale ou sociale
+          a souvent précédé (ou remplacé) la
+          <span class="beth-ellen-regular">reconnaissance</span>
+          artistique.
+        </h2>
+      </div>
+
+      <div id="pourqui-corbaz" class="panel">
+        <img src="/images/pour-qui/corbaz/corbazLine.png">
+        <img src="/images/pour-qui/corbaz/corbaz1.png">
+        <h1 class="beth-ellen-regular">Aloïse Corbaz</h1>
+        <p class="plus-jakarta-sans-extra-bold">Aloïse Corbaz, quant à elle, voit ses œuvres utilisées à des fins
+          pédagogiques par les psychiatres, présentées dans des leçons ou colloques internationaux plutôt que dans des
+          galeries ou musées. Sa reconnaissance artistique est donc d’abord passée par le regard médical, non par celui
+          du musée.</p>
+        <img src="/images/pour-qui/corbaz/corbaz2.png">
+      </div>
+
+      <div id="pourqui-lesage" class="panel">
+        <img src="/images/pour-qui/lesage/lesageLine.png">
+        <img src="/images/pour-qui/lesage/image1.png">
+        <h1 class="beth-ellen-regular">Augustin Lesage</h1>
+        <p class="plus-jakarta-sans-extra-bold">
+          Peintre médiumnique autodidacte, a exposé en 1926 au Salon des Beaux-Arts et au Salon d’Automne, pourtant, ses
+          œuvres, inspirées par l’Égypte et le spirituel, ont heurté la critique académique et la « compréhension » des
+          institutions. Son parcours montre que même une présence dans des salons officiels n’assure pas l’acceptation
+          critique ou muséale durable.
+        </p>
+        <img src="/images/pour-qui/lesage/image2.png">
+      </div>
+
+      <div id="pourqui-outro" class="panel">
+        <h2 class="plus-jakarta-sans-extra-bold">Pourtant, le destin de l’Art Brut change grâce au marché de l’art et
+          aux collectionneurs. La reconnaissance ne vient plus uniquement des musées : la visibilité et l’acquisition
+          par des <span class="beth-ellen-regular">amateurs et collectionneurs</span> légitiment ces œuvres, qui
+          trouvent aujourd’hui une place sur les murs des galeries et dans les grandes collections, comme celles de
+          Lausanne ou de la Christian Berst Gallery.</h2>
+        <h2 class="plus-jakarta-sans-extra-bold">L’Art Brut prouve ainsi que la valeur artistique peut naître du <span
+            class="beth-ellen-regular">rejet</span> et de <span class="beth-ellen-regular">l’inattention</span> des
+          institutions, et que la légitimité est parfois le fruit d’un regard différent sur la création.</h2>
+      </div>
+
+
       <div id="etvous" class="panel">
         <h1>ET VOUS ?</h1>
       </div>
