--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/png" href="/images/icon.png" />
   <link rel="stylesheet" href="/reset.css">
   <link rel="stylesheet" href="/style.css">
   <link rel="stylesheet" href="/layout.css">
@@ -36,10 +37,9 @@
       <div id="navMenu">
         <ul class="navList chelsea-market-regular">
           <li><a href="#homepage">HOME</a></li>
-          <li><a>QUÈSACO ?</a></li>
-          <li><a>AVEC QUOI ?</a></li>
-          <li><a>POUR QUI ?</a></li>
-          <li><a>ET VOUS ?</a></li>
+          <li><a href="#quesaco-intro">QUÈSACO ?</a></li>
+          <li><a href="#avecquoi-intro">AVEC QUOI ?</a></li>
+          <li><a href="#pourqui-intro">POUR QUI ?</a></li>
         </ul>
         <div>
           <div class="closeBtn">
@@ -59,9 +59,53 @@
         </div>
       </div>
 
-      <div id="quesaco" class="panel">
-        <h1>QUÈSACO ?</h1>
+      <div id="quesaco-intro" class="panel">
+        <h1 class="beth-ellen-regular">QUÈSACO ?</h1>
       </div>
+      <div id="quesaco-mots" class="panel">
+        <img src="/images/quesaco/image1.png">
+        <img src="/images/quesaco/image3.png">
+        <img src="/images/quesaco/image5.png">
+        <img src="/images/quesaco/image7.png">
+        <img src="/images/quesaco/image9.png">
+        <img src="/images/quesaco/image11.png">
+      </div>
+      <div id="quesaco-ref" class="panel">
+        <img src="/images/quesaco/image13.png">
+        <img src="/images/quesaco/image18.png">
+        <img src="/images/quesaco/image14.png">
+        <img src="/images/quesaco/image15.png">
+        <img src="/images/quesaco/image16.png">
+        <img src="/images/quesaco/image17.png">
+        <p class="plus-jakarta-sans-extra-bold">Maxime du camp, L'Art et les fous<br>Kunst<br>Outsider Art, Cardinal
+          Roger,
+          1973<br>Justine Python (optionnel, element visuel)<br>Lettre, Aloise Corbaz</p>
+      </div>
+
+      <div id="quesaco-bulles" class="panel">
+        <img src="/images/quesaco/image24.png">
+        <img src="/images/quesaco/image21.png">
+        <img src="/images/quesaco/image19.png">
+        <img src="/images/quesaco/image22.png">
+        <img src="/images/quesaco/image23.png">
+        <img src="/images/quesaco/image20.png">
+      </div>
+
+      <div id="quesaco-emblematiques" class="panel">
+
+        <img src="/images/quesaco/rectangleRed.png">
+        <h2 class="beth-ellen-regular">Les emblématiques</h2>
+        <img src="/images/quesaco/image26.png">
+        <p class="plus-jakarta-sans-extra-bold">Adolf Wölfli - signature</p>
+
+        <img src="/images/quesaco/image25.png">
+        <p class="plus-jakarta-sans-extra-bold">Aloïse (Aloïse Corbaz, dite)<br>(1886, Suisse - 1964, Suisse)<br>La
+          Blanche cavale. Couverture du carnet vers 1942</p>
+
+        <img src="/images/quesaco/image27.png">
+        <p class="plus-jakarta-sans-extra-bold">Jean Dubuffet<br>1901 - 1985</p>
+      </div>
+
       <div id="avecquoi-intro" class="panel">
         <div class="avecquoi-intro">
           <img src="/images/avec-quoi/anim-intro.gif">
@@ -428,14 +472,23 @@
           institutions, et que la légitimité est parfois le fruit d’un regard différent sur la création.</h2>
       </div>
 
-
-      <div id="etvous" class="panel">
-        <h1>ET VOUS ?</h1>
-      </div>
-
     </div>
 
-    <div id="about" style="display: none;"></div>
+    <div id="about" style="display: none;">
+
+      <p class="chelsea-market-regular">Art brut, une exposition virtuelle, est un projet universitaire réalisé au
+        sein du Master CEN de Paris 8 durant le cours d'éditorialisation dispensé par Arnaud Laborderie</p>
+      <p class="chelsea-market-regular">Éditorialisation et contenu du site : Elene Rusadze assistée par LLMs<br><br>
+
+        Design graphique et webdesign : Imane Ouaali, Rebecca Gförer, Lisa Dessommes, Arthur Gillier<br><br>
+
+        Développement web : Arthur Gillier assisté par LLMs
+      </p>
+
+      <div class="closeBtn">
+        <img src="/images/close.svg">
+      </div>
+    </div>
   </div>
   <script type="module" src="/main.js"></script>
 </body>
