--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
         sein du Master CEN de Paris 8 durant le cours d'éditorialisation dispensé par Arnaud Laborderie</p>
       <p class="chelsea-market-regular">Éditorialisation et contenu du site : Elene Rusadze assistée par LLMs<br><br>
 
-        Design graphique et webdesign : Imane Ouaali, Rebecca Gförer, Lisa Dessommes, Arthur Gillier<br><br>
+        Design graphique et webdesign : Imane Ouaali, Rébecca Gfrörer, Lisa Dessommes, Arthur Gillier<br><br>
 
         Développement web : Arthur Gillier assisté par LLMs
       </p>
